--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.4.0",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
