--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mui/material": "^6.4.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.1",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
     "next": "15.1.6",
